@@ -33,4 +33,11 @@
       nzMin="0"
     ></nz-input-number>
   </nz-form-control>
+
+  <label
+    nz-checkbox
+    name="AllowDowngrade"
+    [(ngModel)]="ms.game.automationManager.fleetUpdater.allowDowngrade"
+    >Allow downgrade</label
+  >
 </form>
