@@ -43,6 +43,8 @@
       <strong>'Max ratio'</strong> is the maximum 'work per second'/'average
       module price', increasing it will result in higher but also expensive
       module levels.
+      <br />
+      <strong>Allow downgrade</strong> Allow decreasing module level.
     </p>
   </ng-template>
 
