@@ -1,3 +1,6 @@
+11/1/2021
+-   Fleet updater fix and allow downgrade
+
 9/1/2021
 -   Improved battle performances
 
